fix: [PD-406] Home menu icons alignmets

--- a/src/component/GenderButton/GenderButton.style.scss
+++ b/src/component/GenderButton/GenderButton.style.scss
@@ -1,22 +1,27 @@
 .GenderButton {
   &-Link {
-    margin : 0px 13px;
+    margin: 0px 13px;
+    display: flex;
+    flex-direction: row;
+
     &:hover {
       text-shadow: 0 0 0.01px black;
     }
+
+    .GenderIcon {
+      height: 25px;
+      width: 25px;
+    }
   }
+
   &-Container {
     display: inline-block;
-    height: 14px;
-    // margin: 20px 0;
-
+    align-self: center;
     @include before-desktop {
       height: 16px;
       border-left: 0;
       border-right: 0;
       margin-bottom: 0;
-      // padding-bottom: 49px;
-      // padding-top: 15px;
       pointer-events: none;
     }
 
@@ -25,18 +30,22 @@
         padding-left: 0;
         margin-left: 0;
       }
+
       &:last-child {
         padding-left: 10;
         margin-right: 0;
       }
     }
+
     @include tablet {
       margin: 0px 15px;
       padding: 0;
+
       &:first-child {
         padding-left: 0;
         margin-left: 0;
       }
+
       &:last-child {
         padding-left: 10;
         margin-right: 0;
@@ -52,14 +61,6 @@
     pointer-events: all;
     letter-spacing: 0.86px;
     z-index: 2;
-    &::before {
-      display: block;
-      content: attr(name);
-      font-weight: bold;
-      height: 0;
-      overflow: hidden;
-      visibility: hidden;
-    }
 
     &_isCurrentGender,
     &:hover {
@@ -67,6 +68,7 @@
       letter-spacing: 0;
       font-size: 13px;
       transition-duration: unset;
+
       @include desktop {
         font-size: 12px;
       }
@@ -77,10 +79,7 @@
       font-weight: var(--fw-regular);
     }
 
-    @include desktop {
-      height: 30px;
-      margin-top: -30px;
-    }
+    @include desktop {}
   }
 }
 
@@ -88,23 +87,40 @@
   &_isArabic {
     .GenderButton {
       &-Container {
+        @include before-desktop {
+          &:last-child {
+            &::before {
+              left: initial;
+              right: -17px;
+            }
+          }
+        }
+
         @include desktop {
           &:first-child {
             margin-left: 15px;
             padding-right: 0;
             margin-right: 0;
           }
+
           &:last-child {
             margin-left: 0px;
-            margin-right: 25px;
+
+            &::before {
+              left: initial;
+              right: -14px;
+            }
           }
         }
+
         @include tablet {
           margin: 0px 15px;
+
           &:first-child {
             padding-left: 0;
             margin-right: 0;
           }
+
           &:last-child {
             padding-left: 0;
             margin-left: 0;
